# L25-Compiler

./: .gitignore  AGENTS.md  CMakeLists.txt  Makefile  README.md  ast.cpp  ast.h  errorReporter.cpp  lex.yy.cc  lexer.cpp  lexer.l  main.cpp  parser.output  parser.tab.cc  parser.tab.hh  parser.y  semanticAnalysis.cpp  semanticAnalysis.h  symbol.cpp  symbol.h  test.sh  test7
.github/workflows/: codeql.yml
include/: ast.h  errorReporter.h  semanticAnalysis.h  symbol.h
test/: diff.txt  error_class_unknown_member.l25  error_missing_semicolon.l25  error_undeclared_variable.l25  error_wrong_call_arity.l25  test1.l25  test10.l25  test11.l25  test12.l25  test13.l25  test14.l25  test15.l25  test16.l25  test17.l25  test18.l25  test19.l25  test2.l25  test20.l25  test3  test3.l25  test3.ll  test4.l25  test4.ll  test5.l25  test6  test6.l25  test7.l25  test9.l25  testCode.l25  test_class_basic.l25  test_class_method_call.l25  test_closure.l25  test_float.l25  test_pointer.l25
utils/: Makefile  lexer.l
